--- a/web development/My Site/css/styles.css
+++ b/web development/My Site/css/styles.css
@@ -3,22 +3,47 @@ body {
   text-align: center;
   font-family: calibri, verdana, arial, sans-serif;
   font-size: 1.5em;
+  color: #40514E
 }
 h1 {
   font-size: 3.5rem;
   margin: 0;
   font-family: 'Merriweather', serif;
   font-weight: normal;
+  color:#C47AFF;
+}
+h2 {
+  color:#C47AFF;
+  margin: 0;
+  padding-bottom: 40px;
+}
+h3 {
+  color:#C47AFF;
 }
 .work {
   font-size: 25px;
   font-style: italic;
+  color:#C47AFF;
 }
 hr {
   border-style:dotted none none;
-  border-color: grey;
-  border-top-width:6px;
-  width: 90%;
+  border-color:#7978FF;
+  border-top-width:10px;
+  width: 60%;
+}
+p {
+  line-height: 2;
+}
+a {
+  color:#40514E;
+  text-decoration: none;
+}
+a:hover {
+color: white;
+}
+.star:hover {
+  background-color: #C47AFF;
+  border-radius: 5%;
 }
 .sun {
   height: 80px;
@@ -50,11 +75,22 @@ display: inline-block;
   bottom: 300px; left: 500px;
 }
 .me {
-  height: 200px;
-  width: 200px;
+  height: 250px;
+  width: 250px;
   border-radius: 100%;
   position: relative;
-  top:10px;
+  top:5px;
+  float: left;
+}
+.about-me {
+  text-align: left;
+  position:relative;
+  left: 2rem;
+}
+.intro {
+  text-align: left;
+  position: relative;
+  left: 2rem;
 }
 .table-center {
   text-align: left;
@@ -88,8 +124,8 @@ display: inline-block;
   top:5px;
 }
 .gmail-img {
-  height: 25px;
-  width: 25px;
+  height: 40px;
+  width: 40px;
   position: relative;
   top:5px;
 }
@@ -97,9 +133,6 @@ display: inline-block;
   position: relative;
   right: 50px;
   top: 6px;
-}
-.skill-row {
-
 }
 .pencil {
   height:150px;
@@ -141,4 +174,32 @@ display: inline-block;
   line-height: 4px;
   position: relative;
   left: 5px;
+}
+.btn {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 60;
+  -moz-border-radius: 60;
+  border-radius: 60px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 27px;
+  padding: 3px 6px 3px 6px;
+  border: solid #1f628d 2px;
+  text-decoration: none;
+  position: relative;
+  bottom: 4px;
+}
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #2b6f9c);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #2b6f9c);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #2b6f9c);
+  background-image: -o-linear-gradient(top, #3cb0fd, #2b6f9c);
+  background-image: linear-gradient(to bottom, #3cb0fd, #2b6f9c);
+  text-decoration: none;
 }
