--- a/web development/mentorme/css/styles.css
+++ b/web development/mentorme/css/styles.css
@@ -48,6 +48,7 @@ padding: 0 10px;
 h3 {
   font-family: "Montserrat-bold",sans-serif;
   font-size: 1.5rem;
+  margin: 0;
 }
 
 i{
@@ -62,4 +63,8 @@ i:hover {
 }
 #features {
   text-align: center;
+}
+
+.features-box {
+  padding: 5%;
 }
