--- a/web development/mentorme/css/styles.css
+++ b/web development/mentorme/css/styles.css
@@ -4,12 +4,7 @@ body {
 #title {
   background-color: #7DE5ED;
 }
-h1 {
-font-family: 'Ubuntu', sans-serif;
-font-size: 3rem;
-line-height: 1.5;
-color: white;
-}
+
 .container-fluid {
   padding-left: 3%;
   padding-right: 3%;
@@ -45,20 +40,34 @@ padding: 0 10px;
   width: 80%;
 }
 
+h1 {
+font-family: 'Ubuntu', sans-serif;
+font-size: 3rem;
+line-height: 1.5;
+color: white;
+}
+
+h2 {
+  font-family: "Montserrat-bold",sans-serif;
+  font-size: 3rem;
+  margin: 0;
+  padding:5%;
+  text-align: center;
+}
 h3 {
   font-family: "Montserrat-bold",sans-serif;
   font-size: 1.5rem;
   margin: 0;
 }
 
-i{
+.features-icon{
   padding-top: 1rem;
   padding-bottom: 1rem;
   font-size: 3rem;
   text-align: center;
   color: #7DE5ED;
 }
-i:hover {
+.features-icon:hover {
   color: #5DA7DB;
 }
 #features {
@@ -67,4 +76,27 @@ i:hover {
 
 .features-box {
   padding: 5%;
+}
+
+#testimonials {
+  text-align: center;
+  background-color: #7DE5ED;
+  color: white;
+}
+
+.testimonials-image {
+  border-radius: 100%;
+  width:15%;
+  margin-bottom: 2rem;
+}
+
+#press {
+  text-align: center;
+  background-color: #7DE5ED;
+  color: white;
+  padding-bottom: 3%;
+}
+.press-image {
+  width: 15%;
+  margin: 35px 35px 50px;
 }
