--- a/web development/mentorme/css/styles.css
+++ b/web development/mentorme/css/styles.css
@@ -1,6 +1,27 @@
 body {
   font-family: "Montserrat";
 }
+h1 {
+font-family: 'Ubuntu', sans-serif;
+font-size: 3rem;
+line-height: 1.5;
+color: white;
+}
+
+h2 {
+  font-family: "Montserrat-bold",sans-serif;
+  font-size: 4rem;
+  margin: 0;
+  padding:5%;
+  text-align: center;
+}
+h3 {
+  font-family: "Montserrat-bold",sans-serif;
+  font-size: 1.5rem;
+  margin: 0;
+  color: #7DE5ED;
+}
+
 #title {
   background-color: #7DE5ED;
 }
@@ -13,9 +34,6 @@ body {
 .navbar-brand {
   font-family:"Ubuntu", sans-serif;
   font-size:2rem;
-}
-.mentoring {
-  transform: rotateZ(1deg);
 }
 
 .navbar {
@@ -37,27 +55,10 @@ padding: 0 10px;
 }
 /*image*/
 .mentoring {
-  width: 80%;
-}
-
-h1 {
-font-family: 'Ubuntu', sans-serif;
-font-size: 3rem;
-line-height: 1.5;
-color: white;
-}
-
-h2 {
-  font-family: "Montserrat-bold",sans-serif;
-  font-size: 3rem;
-  margin: 0;
-  padding:5%;
-  text-align: center;
-}
-h3 {
-  font-family: "Montserrat-bold",sans-serif;
-  font-size: 1.5rem;
-  margin: 0;
+  width: 60%;
+  transform: rotateZ(1deg);
+ position: relative;
+ left:40%;
 }
 
 .features-icon{
@@ -99,4 +100,74 @@ h3 {
 .press-image {
   width: 15%;
   margin: 35px 35px 50px;
+}
+
+.carousel-item {
+  padding: 3% 7%;
+}
+
+/* pricing section */
+#pricing  {
+  padding: 100px;
+  text-align: center;
+}
+.card {
+  border: 1px solid;
+}
+.cards {
+  padding: 3% 2%;
+}
+
+.card-header {
+  background-color: #7DE5ED;
+  color:white;
+}
+
+.pricing-header {
+  color: #7DE5ED;
+}
+
+.head-card {
+  color:white;
+}
+
+#cta {
+background-color: #7DE5ED;
+text-align: center;
+}
+
+.cta-header {
+  color:white;
+  font-family: "Montserrat-bold",sans-serif;
+  font-size: 4rem;
+  margin: 0;
+  padding:5%;
+  text-align: center;
+}
+
+#footer {
+  background-color: #fff;
+  text-align: center;
+}
+.footer-button{
+  margin-bottom: 3%;
+}
+
+.footer-image {
+  padding: 6% 1% 3%;
+}
+
+@media (max-width: 1023px) {
+  #title {
+    text-align: center;
+  }
+  .mentoring  {
+    position: static;
+  }
+  #cta {
+    text-align: center;
+  }
+  .footer-button {
+    margin:5% 3% 3% 0;
+  }
 }
